<resources>
    <string name="app_name">PlusControl</string>
    <string name="action_settings">Settings</string>
    <string name="btn_main_cadastros">Cadastro</string>
    <string name="btn_main_despesas_receitas">Despesa / Receita</string>
    <string name="title_activity_cadastros">Cadastros</string>
    <string name="btn_cad_categoria">Categoria</string>
    <string name="title_activity_categoria_lista">Lista de Categoria</string>
    <string name="title_activity_categoria_adicionar">Adicionar Categoria</string>
    <string name="title_activity_categoria_detalhes">Detalhes da Categoria</string>
    <string name="title_activity_categoria_editar">Editar Categoria</string>
    <string name="btn_cad_cliente">Cliente</string>
    <string name="title_activity_cliente_lista">ClienteLista</string>
    <string name="title_activity_cliente_adicionar">Adicionar Cliente</string>
    <string name="title_activity_cliente_detalhes">Detalhes do Cliente</string>
    <string name="title_activity_cliente_editar">Editar Cliente</string>
    <string name="btn_cad_fornecedor">Fornecedor</string>
    <string name="title_activity_fornecedor_lista">Lista de Fornecedores</string>
    <string name="title_activity_fornecedor_adicionar">Adicionar Fornecedor</string>
    <string name="title_activity_fornecedor_detalhes">Detalhes do Fornecedor</string>
    <string name="title_activity_fornecedor_editar">Editar Fornecedor</string>
    <string name="title_activity_titulos">Tipos de Títulos</string>
    <string name="btn_cad_receita">Receita</string>
    <string name="btn_cad_despesa">Despesa</string>
    <string name="title_activity_receita_lista">Lista de Receita</string>
    <string name="title_activity_receita_adicionar">Cadastrar Receita</string>
    <string name="title_activity_receita_detalhes">Detalhes da Receita</string>
    <string name="title_activity_receita_editar">Receita Receita</string>
    <string name="title_activity_despesa_lista">Lista de Despesa</string>
    <string name="title_activity_despesa_adicionar">Adicionar Despesa</string>
    <string name="title_activity_despesa_detalhes">Detalhes da Despesa</string>
    <string name="title_activity_despesas_editar">Editar Despesa</string>
    <string name="title_activity_conta_lista">Lista de Conta</string>
    <string name="btn_cadastro_conta">Conta</string>
    <string name="title_activity_conta_adicionar">Adicionar Conta</string>
    <string name="title_activity_conta_detalhes">Detalhes da Conta</string>
    <string name="title_activity_conta_editar">Editar Conta</string>
    <string name="title_activity_movimentos">Movimentos</string>
    <string name="btn_movimento_pagamento">Pagamento</string>
    <string name="btn_movimento_recebimento">Recebimento</string>
    <string name="btn_movimento_transferencia">Transferência</string>
    <string name="btn_movimento_saque">Saque</string>
    <string name="title_activity_recebimento">Recebimento</string>
    <string name="title_activity_recebimento_lista">Lista de Recebimento</string>
    <string name="title_activity_recebimento_detalhes">Detalhes do Recebimento</string>
    <string name="title_activity_recebimento_adicionar">Adicionar Recebimento</string>
    <string name="title_activity_recebimento_editar">Recebimento de Título</string>
    <string name="title_activity_transferencia_lista">Lista de Transferência</string>
    <string name="btn_recebimento_filtro">Filtro</string>
    <string name="title_activity_pagamento_lista">Lista de Pagamento</string>
    <string name="title_activity_pagamento_detalhes">Detalhes do Pagamento</string>
    <string name="title_activity_pagamento_editar">Editar Pagamento</string>
    <string name="title_activity_transferencia_adicionar">Adicionar Transferência</string>
    <string name="title_activity_saque_lista">Lista de Saque</string>
    <string name="title_activity_saque_adicionar">Adicionar Saque</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="action_sobre">Sobre</string>
    <string name="title_activity_estorno_lista">Lista de Movimento para Estorno</string>
    <string name="title_activity_estorno_detalhes_confirmar">Detalhes e Confirmar Estorno</string>
    <string name="title_activity_saque_detalhes">Detalhes do Saque</string>
    <string name="title_activity_transferencia_detalhes">Detalhes da Transferência</string>
    <string name="action_relatorios">Relatórios</string>
    <string name="title_activity_relatorios">Relatórios</string>
    <string name="title_activity_relatorio_despesas_categoria">Relatório de Categorias
    </string>
    <string name="title_activity_relatorio_despesas_categoria_filtro">Categoria -
        Filtro
    </string>
    <string name="title_activity_relatorio_contas_pagar_filtro">Filtro de Contas a Pagar</string>
    <string name="title_activity_relatorio_contas_pagar">Relatorio de Contas a Pagar</string>
    <string name="title_activity_relatorio_contas_receber_filtro">Filtro de Contas a Receber
    </string>
    <string name="title_activity_relatorio_contas_receber">Relatório de Contas a Receber</string>
    <string name="title_activity_relatorio_fluxo_caixa_filtro">Filtro de Fluxo de Caixa</string>
    <string name="action_backup">Backup</string>
    <string name="title_activity_backup">Operações de Backup</string>
    <string name="action_usuario">Usuário</string>
    <string name="title_activity_usuario">Usuário - Cadastro / Edição</string>
    <string name="title_activity_backup_import">Backup Importação</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="title_activity_relatorio_fluxo_caixa">Fluxo de Caixa</string>
</resources>