<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.andrebronca.pluscontrol.MainActivity">
    <item
        android:id="@+id/action_relatorios"
        android:orderInCategory="100"
        android:title="@string/action_relatorios"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_usuario"
        android:orderInCategory="100"
        android:title="@string/action_usuario"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/action_sobre"
        app:showAsAction="never" />
</menu>
