<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_movimentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="br.com.andrebronca.pluscontrol.Movimentos"
        tools:showIn="@layout/activity_movimentos">

        <Button
            android:id="@+id/btn_movimento_recebimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/ic_movimento_recebimento_24dp"
            android:text="@string/btn_movimento_recebimento"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_movimento_pagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/ic_movimento_pagamento_24dp"
            android:text="@string/btn_movimento_pagamento"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_movimento_transferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/ic_movimento_transferencia_24dp"
            android:text="@string/btn_movimento_transferencia"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_movimento_saque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/ic_movimento_saque_24dp"
            android:text="@string/btn_movimento_saque"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_movimento_estorno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_movimento_estorno_24dp"
            android:text="Estorno"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>